@@ -24,5 +24,5 @@ test-output-tests
 testng.iml
 z_build
 .DS_Store
-
+outputDir/
 **/Version.java
