@@ -2,7 +2,7 @@ package test.dataprovider.issue1987;
 
 import org.testng.annotations.Test;
 
-public class DataProviderInBaseClass extends BaseClassSample {
+public class DataProviderInBaseClassSample extends BaseClassSample {
 
   @Test(dataProvider = "dp")
   public void testMethod(int i) {}
