@@ -7,7 +7,7 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-public class SampleTestCase {
+public class TestClassSample {
 
   @BeforeMethod(alwaysRun = true)
   public void setup(Method method, Object[] params) {
