@@ -5,7 +5,7 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-public class SampleTestCase {
+public class TestClassSample {
 
   @DataProvider
   public Object[][] data() {
