@@ -600,13 +600,7 @@
       <class name="test.dataprovider.FailingIterableDataProviderTest" />
       <class name="test.dataprovider.IndicesTest" />
       <class name="test.dataprovider.DataProviderTest"/>
-      <class name="test.dataprovider.issue1987.IssueTest"/>
       <class name="test.dataprovider.InterceptorTest"/>
-      <class name="test.dataprovider.issue2255.IssueTest"/>
-      <class name="test.dataprovider.issue217.IssueTest"/>
-      <class name="test.dataprovider.issue2267.IssueTest"/>
-      <class name="test.dataprovider.issue2327.IssueTest"/>
-      <class name="test.dataprovider.issue2504.IssueTest"/>
     </classes>
   </test>
 
